# llm_watermark

./: .gitignore  .gitmodules  acrostics_icw.py  acrostics_zstat.py  aggregate_avg_green_prob_results.py  analyze_acrostic_swcleanv1.py  analyze_acrostics_paper_dts.py  analyze_acrostics_pilot.py  assemble_mixed_train_parquet.py  assemble_mixed_val_parquet.py  build_acrostics_negatives.py  build_rl_train_parquet.py  build_rl_train_parquet_delta.py  build_val_initials_v3.py  compare_extractors.py  compute_initials_auc.py  compute_initials_stats.py  compute_negative_and_auc.py  compute_ppl.py  compute_ppl_v2.py  dataset.py  dataset_kd_incontext.py  evaluate.py  filter_by_prefix_sample.py  filter_initials_syn.py  gptwm.py  gptwm_acrostics.py  gptwm_incontext.py  gptwm_initials.py  gptwm_vllm_config.py  inspect_acrostic_samples.py  jsonl_to_parquet_lfqa.py  llama_detect.sh  llama_generate.sh  make_initials_pilot_report.py  make_quality_report.py  pick_best_candidate_initials.py  prompt.py  pyproject.toml  qwen_detect.sh  (+25 more)
configs/: ds_zero2_config.json  ds_zero3_config.json
data_process/: 0_combine_pos_neg.py  1_filter_by_prefix_sample.py  2_jsonl_to_parquet_file.py  analyze_lfqa_datasets.py  analyze_parquet_tokens.py  clean_vblagoje_lfqa.py  combine_pos_neg.py  filter_by_prefix_sample.py  filters.py  json_to_parquet_incontext.py  jsonl_to_parquet_14b_lfqa_and_analyze.py  jsonl_to_parquet_file.py  jsonl_to_parquet_lfqa.py  plot_token_dist.py
scripts/: analyze_parquet_tokens.py  autopilot_rl_stage2_epoch1.sh  autopilot_rl_stage2_full.sh  build_initials_v3.sh  eval_alt_vocab.sh  (+38 more)
(+4 files in other folders)
