[project]
name = "llm-watermark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipdb>=0.13.13",
    "ipykernel>=7.1.0",
    "ninja>=1.13.0",
    "packaging>=25.0",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "vllm>=0.14.1",
]
