[project]
name = "llm-watermark"
version = "0.1.0"
description = "llm-watermark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ipdb",
    "ipykernel",
]

[tool.uv.sources]
vllm = { path = "/home/tianyichen/vllm" }

[tool.setuptools]
packages = ["train"]